fixed overlap of screen sizes

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,7 +14,7 @@ html {
   scroll-behavior: smooth;
 }
 
-@media screen and (min-width: 450px) and (max-width: 949px) {
+@media screen and (min-width: 450px) and (max-width: 749px) {
   .layout-row {
     padding: 50px 20px;
     margin: 0;
